--- a/cat-pictures-website/index.html
+++ b/cat-pictures-website/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <main>
-        <section class="hero">
+        <section class="hero" style="background-image: url('https://placehold.co/1200x400/ff6b6b/ffffff/png?text=Beautiful+Cat+Photography'); background-size: cover; background-position: center;">
             <div class="hero__container">
                 <h2 class="hero__title">Capture the Magic of Cats</h2>
                 <p class="hero__subtitle">Professional cat photographs that bring joy to any space</p>
@@ -36,21 +36,21 @@
                 <div class="featured__grid">
                     <article class="picture-card">
                         <div class="picture-card__image">
-                            <img src="https://placekitten.com/400/300?image=1" alt="Sleeping cat on a windowsill" loading="lazy">
+                            <img src="https://placehold.co/400x300/636e72/ffffff/png?text=Sleeping+Cat" alt="Sleeping cat on a windowsill" loading="lazy">
                         </div>
                         <h3 class="picture-card__title">Peaceful Dreams</h3>
                         <p class="picture-card__price">$29.99</p>
                     </article>
                     <article class="picture-card">
                         <div class="picture-card__image">
-                            <img src="https://placekitten.com/400/300?image=2" alt="Playful kitten with a toy" loading="lazy">
+                            <img src="https://placehold.co/400x300/636e72/ffffff/png?text=Playful+Cat" alt="Playful kitten with a toy" loading="lazy">
                         </div>
                         <h3 class="picture-card__title">Joyful Moments</h3>
                         <p class="picture-card__price">$34.99</p>
                     </article>
                     <article class="picture-card">
                         <div class="picture-card__image">
-                            <img src="https://placekitten.com/400/300?image=3" alt="Curious cat looking at camera" loading="lazy">
+                            <img src="https://placehold.co/400x300/636e72/ffffff/png?text=Curious+Cat" alt="Curious cat looking at camera" loading="lazy">
                         </div>
                         <h3 class="picture-card__title">Window Watcher</h3>
                         <p class="picture-card__price">$24.99</p>
