--- a/cat-pictures-website/index.html
+++ b/cat-pictures-website/index.html
@@ -13,6 +13,8 @@
             <h1 class="header__logo">PurrPics</h1>
             <nav class="header__nav">
                 <ul class="nav__list">
+                    <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
+                    <li class="nav__item"><a href="about.html" class="nav__link">About</a></li>
                     <li class="nav__item"><a href="#featured" class="nav__link">Featured</a></li>
                     <li class="nav__item"><a href="#pricing" class="nav__link">Pricing</a></li>
                     <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
