FIX labels on landing page

--- a/cat-pictures-website/index.html
+++ b/cat-pictures-website/index.html
@@ -24,7 +24,7 @@
     </header>
 
     <main>
-        <section class="hero" style="background-image: url('https://placehold.co/1200x400/ff6b6b/ffffff/png?text=Beautiful+Cat+Photography'); background-size: cover; background-position: center;">
+        <section class="hero">
             <div class="hero__container">
                 <h2 class="hero__title">Capture the Magic of Cats</h2>
                 <p class="hero__subtitle">Professional cat photographs that bring joy to any space</p>
