FEAT added Search box

--- a/cat-pictures-website/index.html
+++ b/cat-pictures-website/index.html
@@ -11,6 +11,10 @@
     <header class="header">
         <div class="header__container">
             <h1 class="header__logo">PurrPics</h1>
+            <div class="search-box">
+                <input type="text" id="search-input" class="search-box__input" placeholder="Search...">
+                <ul id="search-results" class="search-results"></ul>
+            </div>
             <nav class="header__nav">
                 <ul class="nav__list">
                     <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
@@ -103,5 +107,6 @@
             <p class="footer__copyright">&copy; 2024 PurrPics. All rights reserved.</p>
         </div>
     </footer>
+    <script src="js/search.js"></script>
 </body>
 </html>
