--- a/cat-pictures-website/index.html
+++ b/cat-pictures-website/index.html
@@ -107,6 +107,6 @@
             <p class="footer__copyright">&copy; 2024 PurrPics. All rights reserved.</p>
         </div>
     </footer>
-    <script src="js/search.js"></script>
+    <script src="js/rag.js"></script>
 </body>
 </html>
