--- a/cat-pictures-website/index.html
+++ b/cat-pictures-website/index.html
@@ -49,24 +49,27 @@
                 <div class="featured__grid">
                     <article class="picture-card">
                         <div class="picture-card__image">
-                            <img src="https://placehold.co/400x300/636e72/ffffff/png?text=Sleeping+Cat" alt="Sleeping cat on a windowsill" loading="lazy">
+                            <img src="images/sleeping_cat.jpg" alt="Sleeping cat on a windowsill" loading="lazy">
                         </div>
                         <h3 class="picture-card__title">Peaceful Dreams</h3>
                         <p class="picture-card__price">$29.99</p>
+                        <a href="products/peaceful-dreams.html" class="picture-card__link" aria-label="View Peaceful Dreams"></a>
                     </article>
                     <article class="picture-card">
                         <div class="picture-card__image">
-                            <img src="https://placehold.co/400x300/636e72/ffffff/png?text=Playful+Cat" alt="Playful kitten with a toy" loading="lazy">
+                            <img src="images/playful_cat.jpg" alt="Playful kitten with a toy" loading="lazy">
                         </div>
                         <h3 class="picture-card__title">Joyful Moments</h3>
                         <p class="picture-card__price">$34.99</p>
+                        <a href="products/joyful-moments.html" class="picture-card__link" aria-label="View Joyful Moments"></a>
                     </article>
                     <article class="picture-card">
                         <div class="picture-card__image">
-                            <img src="https://placehold.co/400x300/636e72/ffffff/png?text=Curious+Cat" alt="Curious cat looking at camera" loading="lazy">
+                            <img src="images/curious_cat.jpg" alt="Curious cat looking at camera" loading="lazy">
                         </div>
                         <h3 class="picture-card__title">Window Watcher</h3>
                         <p class="picture-card__price">$24.99</p>
+                        <a href="products/window-watcher.html" class="picture-card__link" aria-label="View Window Watcher"></a>
                     </article>
                 </div>
             </div>
