FEAT added pictures of cats and changed the ai icon on the landing page

--- a/cat-pictures-website/index.html
+++ b/cat-pictures-website/index.html
@@ -17,8 +17,8 @@
                     <ul id="search-results" class="search-results"></ul>
                 </div>
                 <button id="ai-chat-button" class="ai-button" aria-label="Open AI Chat">
-                    <svg class="ai-icon" viewBox="0 0 24 24" width="24" height="24">
-                        <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm-1-13h2v6h-2zm0 8h2v2h-2z" fill="currentColor"/>
+                    <svg class="ai-icon" viewBox="0 0 24 24" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M12 3L14.5 8.5L21 9L16.5 13L18 19L12 16L6 19L7.5 13L3 9L9.5 8.5L12 3Z"/>
                     </svg>
                 </button>
             </div>
